--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   contained_tab_bar_view: ^0.8.0
   menu_button: ^1.4.2+1
+  anchor_tabs: ^0.0.9
+  flutter_anchorlable: ^0.1.1
 
 dev_dependencies:
   flutter_test:
